# OpenCV-CPP

./: .gitattributes
double camera aligning/: CMakeLists.txt  commands.txt  main.cpp
double camera aligning/docs/: readCSV.txt
double camera aligning/helpers/: functions.cpp  functions.h
mesh noise reduction/: CMakeLists.txt  commands.txt  main.cpp
mesh noise reduction/docs/: readPLYFileWithNormals.txt  writePLYFile.txt
mesh noise reduction/helpers/: functions.cpp  functions.h
phase shifting/: CMakeLists.txt  commands.txt  main.cpp
phase shifting/helpers/: functions.cpp  functions.h
